fix table view of show/index on smaller screen

--- a/app/assets/stylesheets/organizations.sass
+++ b/app/assets/stylesheets/organizations.sass
@@ -46,6 +46,7 @@ tbody.portfolio-projects-table
 #org_infographic
   position: relative
   height: 290px
+  width: 1000px
   .about
     font-size: 12px
     color: #80539C
@@ -209,3 +210,17 @@ form#new_logo
 @media print
   a[href]:after
     content: none !important
+
+.org-pictogram
+  display: flex
+  justify-content: center
+  align-items: center
+  max-width: 100%
+  margin-left: auto
+  margin-right: auto
+
+@media only all and (min-width: 320px) and (max-width: 800px)
+  .org-quick-reference
+    margin-top: 25px
+  #project_header
+    height: 100px
