--- a/app/assets/stylesheets/orgs.sass
+++ b/app/assets/stylesheets/orgs.sass
@@ -1,6 +1,4 @@
 #explore_orgs_page
-  h1
-    margin-left: -10px
   #orgs_by_30_days_volume
     label#filter
       margin-top: 4px
@@ -105,3 +103,9 @@
       background-color: color-gradient($SECONDARY_SLATE_BLUE, 120)
       color: white
       padding: 0 0 0 3px
+
+@media only all and (min-width: 320px) and (max-width: 480px)
+  #explore_orgs_page
+    #newest-orgs
+      padding: 10px 15px 0 10px
+  
